syntax = "proto3";

package device;

service DeviceService {
  rpc SetAliveState (DeviceStateMessage) returns (Empty);
  rpc GetDevices (Empty) returns (stream DeviceDto);
}

message DeviceDto {
  string serial = 1;
  bool is_online = 2;
}

message DeviceStateMessage {
  string serial = 1;
  bool is_online = 2;
}

message Empty { }
